--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,9 @@
     "moment": "~2.10.6",
     "angular-moment": "~0.10.3",
     "angular-sanitize": "~1.4.8",
-    "angular-pdf": "~1.2.6"
+    "angular-pdf": "~1.2.6",
+    "SpinKit": "spinkit#~1.2.5",
+    "angular-spinkit": "~0.3.3"
   },
   "resolutions": {
     "angular": "1.4.8"
