--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "postinstall": "bower cache clean && bower install"
   },
   "dependencies": {
-    "bower": "^1.6.5",
     "body-parser": "~1.12.4",
+    "bower": "^1.6.5",
     "chalk": "^1.1.1",
+    "compression": "^1.6.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
