--- a/bower.json
+++ b/bower.json
@@ -34,10 +34,10 @@
     "api-check": "~7.5.5",
     "moment": "~2.10.6",
     "angular-moment": "~0.10.3",
-    "angular-sanitize": "~1.4.8",
     "angular-pdf": "~1.2.6",
     "SpinKit": "spinkit#~1.2.5",
-    "angular-spinkit": "~0.3.3"
+    "angular-spinkit": "~0.3.3",
+    "angular-sanitize": "~1.4.8"
   },
   "resolutions": {
     "angular": "1.4.8"
