added sms ability to real numbers

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
     "serve-favicon": "~2.2.1",
-    "supergoose": "^0.2.4"
+    "supergoose": "^0.2.4",
+    "twilio": "^3.3.0-edge"
   }
 }
